# Datasense

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Test.js  agent.py  docker-compose.yml  hello.py  main.py  pyproject.toml  render.yaml  requirements.txt  tool_use.py
evals/: run_evals.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/insurance/: Admin.jsx  Certify.jsx  Chat.jsx  InsuranceApp.jsx  Login.jsx  api.js
insurance/: auth.py  certify.py  ingest.py  rag.py  router.py  store.py
